3/21/12 #3225 renamed ParameterSet.add => ParameterSet.with
3/21/12 #3229 Removed WhatIsMountainTime and WhatIsMyIPAddress
3/21/12 #3260 Verify that no delimiters appear in sim sharing parameters
3/19/12 #3204 eliminated stray "textFieldCommitted" message that was occurring in RPAL Game
3/13/12 #3285 add support for testing if sim-sharing is running with a specific configuration
3/13/12 #3283, sim-sharing fixes for spinners
3/13/12 #3284 add Parameter(IParameterKey, IParameterValue) constructor
3/12/12 add "isSelected" parameter to SimSharingJCheckBoxMenuItem user messages
2/28/12 #3267 address sim-sharing problems in SimSharingJSpinner
2/15/12 #3258 created SimSharingJTextField
2/12/12 Moved Property.valueEquals to ObservableProperty
2/6/12 simsharing: Improve sim sharing for purposes of developing (e.g. test mains): SimSharingManager.getInstance doesn't require init() and default config doesn't send to server
2/2/12 simsharing: factor out duplication of component/type/action throughout SimSharingJ* classes
2/2/12 #3223, simplify SimSharingDragListener, which retaining same functionality (ability to specify IUserComponent and customize ParameterSet)
2/2/12 #3223, make Property* Swing components subclass SimSharingJ*, replace and delete SimSharingProperty* classes
2/2/12 i18n of WavelengthControl
1/27/12 Simsharing: Added basic authentication, see #3231
1/26/12 Simsharing: Added study for dallas that requires user id
1/26/12 Simsharing: Fixed: study name not detected correctly
1/25/12 Simsharing: resolves #3228, handle unknown host exception
1/24/12 Simsharing: #3224, turn off specific MongoDB loggers
1/24/12 Simsharing: removed logManager reset call, resolves #3224
1/23/12 Simsharing: add convenience constructors for creating IUserComponent from Object and Class
1/19/12 Simsharing: Send "enabled" flag from SimSharingIcon.  Send events from mouse presses on disabled swing components. See #3218